# crypto-ai-trader

./: .coverage  .env.example  .gitignore  =12.0  CLAUDE.md  Makefile  README.md  fix_runner_test.py  open_dashboard.command  pyproject.toml
backtest_data/candles/: btcusdt_15m.parquet  btcusdt_1h.parquet  eurusd_1d.parquet  eurusd_1h.parquet  gbpusd_1d.parquet  gbpusd_1h.parquet  xauusd_1d.parquet  xauusd_1h.parquet
config/: app.yaml  broker.yaml  contracts.yaml  economic_calendar.yaml  exchanges.yaml  execution.yaml  exit_rules.yaml  risk_profiles.yaml  strategies.yaml  strategy_params_forex.yaml
dashboard/: README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  lib.tsx  styles.css
docs/: claude-collaboration.md  live-trading-roadmap.md  runbook-paper-ops.md
docs/claude-tasks/: current-task.md  last-result.md  next-task-prompts.md
scripts/: add_trade.py  analyze_trades.py  backfill_slippage.py  backtest_composite_system.py  backtest_enhanced_trend.py  backtest_forex.py  backtest_short_term.py  check_store.py  debug_backtest_speed.py  debug_crossover.py  debug_engine.py  debug_engine_issue.py  debug_eur.py  debug_selector.py  debug_signal_speed.py  debug_signals.py  debug_signals_v2.py  debug_trailing_stop.py  diagnose_signals.py  diagnose_strategy.py  log_trade.py  macos_launchd_runtime.sh  migrate_stage2b.py  mini_debug.py  minimax_smoke_test.py  optimize_forex.py  release_gate_live.sh  release_gate_paper.sh  rollback_slippage.py  run_backtest.py  run_backtest_stage3.py  run_paper_supervisor.sh  run_pipeline.py  run_regression_backtest.py  scan_bb_1h.py  scan_bb_engine.py  scan_daily_strategies.py  scan_daily_strategies_v2.py  scan_dual_mode.py  scan_enhanced_trend.py  (+11 more)
tests/unit/: test_ai_scorer.py  (+47 more)
trading/: __init__.py  logging_config.py  main.py
(+130 files in other folders)
